update to accuracy in collab cosine test
modification tracks the number of correct recommendations among the 100 recommendations made for each user, considering a subset from the test set, needs at least 2 mathches

--- a/movie_ML.ipynb
+++ b/movie_ML.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# Connect to the SQLite database\n",
-    "conn = sqlite3.connect('movie_ratings_db.sqlite')\n"
+    "conn = sqlite3.connect('movie_ratings_db.sqlite')"
    ]
   },
   {
@@ -82,8 +82,6 @@
    ],
    "source": [
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "\n",
-    "# Assuming tfidf_matrix_train and tfidf_matrix_test are precomputed TF-IDF matrices\n",
     "\n",
     "# Calculate cosine similarity between test and train matrices\n",
     "similarity_matrix = cosine_similarity(tfidf_matrix_test, tfidf_matrix_train)\n",
@@ -146,48 +144,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 100.00%\n"
+      "Accuracy: 66.41%\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import random\n",
     "\n",
-    "# Assuming movie_user_ratings is the user-item interaction matrix\n",
-    "\n",
-    "# Calculate cosine similarity between movies\n",
-    "movie_similarity = cosine_similarity(movie_user_ratings)\n",
-    "\n",
-    "# Number of top recommendations to consider\n",
-    "top_n = 5\n",
-    "\n",
-    "# Evaluate recommendations and compute accuracy\n",
-    "correct_predictions = 0\n",
-    "total_test_users = len(test_data['userId'].unique())\n",
+    "total_users = len(test_data['userId'].unique())\n",
+    "correct_recommendations = 0\n",
+    "total_recommendations = 0\n",
+    "top_n = 100 # Set the number of top recommendations\n",
     "\n",
     "for user_id in test_data['userId'].unique():\n",
-    "    # Movies rated by the user in the test set\n",
     "    actual_preferences = test_data[test_data['userId'] == user_id]['title'].tolist()\n",
     "    \n",
-    "    # Find similar movies based on cosine similarity\n",
-    "    similar_movies_indices = movie_similarity[movie_user_ratings.index.get_loc(actual_preferences[0])].argsort()[:-top_n-1:-1]\n",
+    "    # Introduce randomness by considering a subset of actual preferences\n",
+    "    random.shuffle(actual_preferences)\n",
+    "    actual_preferences_subset = actual_preferences[:min(len(actual_preferences), 2)]  # match 2\n",
+    "    \n",
+    "    similar_movies_indices = movie_similarity[movie_user_ratings.index.get_loc(actual_preferences_subset[0])].argsort()[:-top_n-1:-1]\n",
     "    recommended_movies = movie_user_ratings.iloc[similar_movies_indices].index.tolist()\n",
     "\n",
-    "    # Check if any actual preferences are among recommended movies\n",
-    "    for movie in actual_preferences:\n",
-    "        if movie in recommended_movies:\n",
-    "            correct_predictions += 1\n",
-    "            break  # Break if at least one correct recommendation is found for the user\n",
+    "    # Track correct recommendations among top N\n",
+    "    for movie in recommended_movies:\n",
+    "        if movie in actual_preferences_subset:\n",
+    "            correct_recommendations += 1\n",
     "\n",
-    "accuracy_percentage = (correct_predictions / total_test_users) * 100\n",
-    "print(f\"Accuracy: {accuracy_percentage:.2f}%\")"
+    "    total_recommendations += min(len(recommended_movies), len(actual_preferences_subset))\n",
+    "\n",
+    "accuracy = (correct_recommendations / total_recommendations)*100 if total_recommendations > 0 else 0\n",
+    "print(f\"Accuracy: {accuracy:.2f}%\")"
    ]
   },
   {
