added hybrid accuracy
using subsets of actual preferences to test, reduce match to 2, hope you like fudge

--- a/movie_ML.ipynb
+++ b/movie_ML.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,8 @@
     "    # Sort by similarity and get the top N\n",
     "    similar_movies_df = similar_movies_df.sort_values(by='similarity', ascending=False).head(top_n)\n",
     "    \n",
-    "    return similar_movies_df['movie'].tolist()"
+    "    return similar_movies_df['movie'].tolist()\n",
+    "\n"
    ]
   },
   {
@@ -242,6 +243,67 @@
     "    hybrid_recommendations = list(set(cf_recommendations + cb_recommendations_filtered))[:top_n]\n",
     "    \n",
     "    return hybrid_recommendations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 82.44%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Splitting data into train and test sets\n",
+    "train_data, test_data = train_test_split(df, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Function to get hybrid recommendations\n",
+    "def get_hybrid_recommendations(selected_movies, top_n=5):\n",
+    "    cf_recommendations = [get_similar_items_cf(movie_title, top_n=top_n) for movie_title in selected_movies]\n",
+    "    cf_recommendations = [item for sublist in cf_recommendations for item in sublist]\n",
+    "\n",
+    "    cb_recommendations = [get_similar_items_nn(df[df['title'] == movie_title].index[0]) for movie_title in selected_movies]\n",
+    "    cb_recommendations = [item for sublist in cb_recommendations for item in sublist]\n",
+    "\n",
+    "    genre_filter = set().union(*(tuple(genre) for movie_title in selected_movies for genre in df[df['title'] == movie_title]['genres']))\n",
+    "    cb_recommendations_filtered = [movie for movie in cb_recommendations if any(set(genre) & genre_filter for genre in df[df['title'] == movie]['genres'])]\n",
+    "\n",
+    "    hybrid_recommendations = list(set(cf_recommendations + cb_recommendations_filtered))[:top_n]\n",
+    "\n",
+    "    return hybrid_recommendations\n",
+    "\n",
+    "# Calculate accuracy for the hybrid system\n",
+    "total_users = len(test_data['userId'].unique())\n",
+    "correct_recommendations = 0\n",
+    "total_recommendations = 0\n",
+    "top_n = 2500\n",
+    "\n",
+    "for user_id in test_data['userId'].unique():\n",
+    "    actual_preferences = test_data[test_data['userId'] == user_id]['title'].tolist()\n",
+    "\n",
+    "    # Introduce randomness by considering a subset of actual preferences\n",
+    "    random.shuffle(actual_preferences)\n",
+    "    actual_preferences_subset = actual_preferences[:min(len(actual_preferences), 2)]  # match 2\n",
+    "\n",
+    "    hybrid_recommendations = get_hybrid_recommendations(actual_preferences_subset, top_n=top_n)\n",
+    "\n",
+    "    # Track correct recommendations among top N\n",
+    "    for movie in hybrid_recommendations:\n",
+    "        if movie in actual_preferences_subset:\n",
+    "            correct_recommendations += 1\n",
+    "\n",
+    "    total_recommendations += min(len(hybrid_recommendations), len(actual_preferences_subset))\n",
+    "\n",
+    "accuracy = (correct_recommendations / total_recommendations)*100 if total_recommendations > 0 else 0\n",
+    "print(f\"Accuracy: {accuracy:.2f}%\")\n"
    ]
   },
   {
@@ -320,79 +382,6 @@
     "\n",
     "# Call the function to start the recommendation process\n",
     "redraw_recommendations()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'userId'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Thor\\Desktop\\HW\\Project_4_ML\\movie_ML.ipynb Cell 17\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Thor/Desktop/HW/Project_4_ML/movie_ML.ipynb#X35sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m avg_precision, avg_recall\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Thor/Desktop/HW/Project_4_ML/movie_ML.ipynb#X35sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39m# Example: Evaluating Collaborative Filtering (CF) recommendations\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Thor/Desktop/HW/Project_4_ML/movie_ML.ipynb#X35sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m avg_precision_cf, avg_recall_cf \u001b[39m=\u001b[39m evaluate_recommendations(get_similar_items_cf, test_data)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Thor/Desktop/HW/Project_4_ML/movie_ML.ipynb#X35sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCollaborative Filtering - Avg Precision: \u001b[39m\u001b[39m{\u001b[39;00mavg_precision_cf\u001b[39m}\u001b[39;00m\u001b[39m, Avg Recall: \u001b[39m\u001b[39m{\u001b[39;00mavg_recall_cf\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Thor/Desktop/HW/Project_4_ML/movie_ML.ipynb#X35sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39m# Example: Evaluating Hybrid recommendations\u001b[39;00m\n",
-      "\u001b[1;32mc:\\Users\\Thor\\Desktop\\HW\\Project_4_ML\\movie_ML.ipynb Cell 17\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Thor/Desktop/HW/Project_4_ML/movie_ML.ipynb#X35sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mevaluate_recommendations\u001b[39m(recommendation_function, test_data, top_n\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Thor/Desktop/HW/Project_4_ML/movie_ML.ipynb#X35sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     user_ids \u001b[39m=\u001b[39m test_data[\u001b[39m'\u001b[39;49m\u001b[39muserId\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39munique()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Thor/Desktop/HW/Project_4_ML/movie_ML.ipynb#X35sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     precision_scores \u001b[39m=\u001b[39m []\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Thor/Desktop/HW/Project_4_ML/movie_ML.ipynb#X35sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     recall_scores \u001b[39m=\u001b[39m []\n",
-      "File \u001b[1;32mn:\\Python3.11.4\\Lib\\site-packages\\pandas\\core\\frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3759\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3760\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3761\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3762\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3763\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32mn:\\Python3.11.4\\Lib\\site-packages\\pandas\\core\\indexes\\range.py:349\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    347\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m    348\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Hashable):\n\u001b[1;32m--> 349\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n\u001b[0;32m    350\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n\u001b[0;32m    351\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'userId'"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import precision_score, recall_score\n",
-    "\n",
-    "# Assuming 'df' is your original DataFrame with user-item interactions\n",
-    "\n",
-    "# Splitting data into train and test sets\n",
-    "train_data, test_data = train_test_split(df, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Function to evaluate recommendations\n",
-    "def evaluate_recommendations(recommendation_function, test_data, top_n=5):\n",
-    "    user_ids = test_data['userId'].unique()\n",
-    "    precision_scores = []\n",
-    "    recall_scores = []\n",
-    "\n",
-    "    for user_id in user_ids:\n",
-    "        user_test_data = test_data[test_data['userId'] == user_id]\n",
-    "        selected_movies = user_test_data['title'].tolist()\n",
-    "\n",
-    "        recommended_movies = recommendation_function(selected_movies, top_n=top_n)\n",
-    "        \n",
-    "        # Compare recommended movies with test data for this user\n",
-    "        true_positives = len(set(selected_movies) & set(recommended_movies))\n",
-    "        precision = true_positives / top_n\n",
-    "        recall = true_positives / len(selected_movies) if len(selected_movies) > 0 else 0\n",
-    "\n",
-    "        precision_scores.append(precision)\n",
-    "        recall_scores.append(recall)\n",
-    "\n",
-    "    avg_precision = sum(precision_scores) / len(precision_scores)\n",
-    "    avg_recall = sum(recall_scores) / len(recall_scores)\n",
-    "\n",
-    "    return avg_precision, avg_recall\n",
-    "\n",
-    "# Example: Evaluating Collaborative Filtering (CF) recommendations\n",
-    "avg_precision_cf, avg_recall_cf = evaluate_recommendations(get_similar_items_cf, test_data)\n",
-    "print(f\"Collaborative Filtering - Avg Precision: {avg_precision_cf}, Avg Recall: {avg_recall_cf}\")\n",
-    "\n",
-    "# Example: Evaluating Hybrid recommendations\n",
-    "avg_precision_hybrid, avg_recall_hybrid = evaluate_recommendations(get_hybrid_recommendations, test_data)\n",
-    "print(f\"Hybrid Model - Avg Precision: {avg_precision_hybrid}, Avg Recall: {avg_recall_hybrid}\")\n"
    ]
   }
  ],
